feat: class article

--- a/server/templates/Home.html
+++ b/server/templates/Home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form method="post">
-        <input type="text", name="text">
+        <textarea rows="10" cols="100" name="text"></textarea>
         <input type="submit">
     </form>
 </body>
