--- a/extension/templates/home.html
+++ b/extension/templates/home.html
@@ -1,15 +1,16 @@
 {% extends 'template.html' %}
 
 {% block body %}
-<form id="myform" method="POST">
-    <div class="form-group">
-        <label for="article">Write your article</label>
-        <textarea class="form-control" name="article" rows="3"></textarea>
+    <form id="myform" action="http://127.0.0.1:5000/" method="POST">
+        <div class="form-group">
+            <label for="article">Write your article</label>
+            <textarea class="form-control" name="article" rows="3"></textarea>
+        </div>
+        <button type="submit" name="assess"  class="btn btn-primary">assess</button>
+        <button type="submit" name="simplify" class="btn btn-primary">simplify</button>
+    </form>
+    <br>
+    <div class="alert alert-primary" role="alert">
+        {{ result }}
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-<br>
-<div class="alert alert-primary" role="alert">
-    {{result}}
-</div>
 {% endblock %}
